# kernel-practice

./: .clangd  .gitignore  CMakeLists.txt  hello  hello.cu  plan.md  pyproject.toml
kernels/matmul/: bench.py  common.cpp  common.hpp  cuda_host.cu  cuda_host.hpp  naive.cu  test.py  tiled.cu
